--- a/style.css
+++ b/style.css
@@ -652,7 +652,9 @@ a:focus {
 }
 a:hover, a:active {
   outline: 0;
-} /* Forms
+}
+
+/* Forms
 --------------------------------------------- */
 .btn,
 button,
@@ -1281,6 +1283,7 @@ header.site-header nav#site-navigation ul.sub-menu {
   font-weight: 200;
   transform: translateX(100%);
   transition: transform 0.4s ease-out;
+  z-index: 2;
 }
 header.site-header nav#site-navigation ul.sub-menu.active {
   transform: translateX(0);
